--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+
+# IntellijIdea files
+*.iml
+.idea
+out
