--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
             <version>1.2.1</version>
         </dependency>
 
+        <!-- JQuery -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
